# gupsup

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  dev_setup.py  production_check.py  pyproject.toml  quick_websocket_test.py  setup.py  test_terminalchat.py
server/: server.py
terminalchat/: __main__.py  client.py  config.py  main.py
websocket_server/: main.py
