[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terminalchat"
version = "1.0.0"
description = "Terminal-based chat app using WebSockets with improved error handling and reconnection"
authors = [{ name="Rahul Deka", email="rahuldeka072@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["websockets>=11.0"]
keywords = ["chat", "terminal", "websocket", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
terminalchat = "terminalchat.client:run_client"

[project.urls]
Homepage = "https://github.com/iamRahul21/terminalchat"
Repository = "https://github.com/iamRahul21/terminalchat"
Issues = "https://github.com/iamRahul21/terminalchat/issues"