[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gupsup"
version = "1.1.0"
description = "Secure terminal-based chat application with image sharing for real-time communication"
authors = [{ name="Rahul Deka", email="rahuldeka072@gmail.com" }]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "websockets>=11.0",
    "cryptography>=3.0.0"
]
keywords = ["chat", "terminal", "websocket", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
gupsup = "terminalchat.client:run_client"

[project.urls]
Homepage = "https://github.com/rahul-deka/terminalchat"
Repository = "https://github.com/rahul-deka/terminalchat"
Issues = "https://github.com/rahul-deka/terminalchat/issues"